--- a/css/style.css
+++ b/css/style.css
@@ -267,11 +267,18 @@ a:active {
     padding: 0 15px;
 }
 
-#hero {
+.container-hero {
+    padding: 0 15px;
     background-color: #e2d0ba;
-    padding: 20px 15px;
     display: inline-block;
-    width: 100%;
+    width: 100%;  
+}
+
+.container-hero p {
+    width: 75%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .row {
