--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 h1 {
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 3em;
     font-weight: 600;
     line-height: 1em;
@@ -27,7 +27,7 @@ h1 {
 }
 
 h2 {
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 2.5em;
     font-weight: 600;
     line-height: 1em;
@@ -36,7 +36,7 @@ h2 {
 }
 
 h3 {
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 2em;
     font-weight: 600;
     line-height: 1em;
@@ -226,7 +226,7 @@ a:active {
 }
 
 .button.secondary {
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 20px;
     padding: 5px 15px;
     background-color: #ecbebf;
@@ -332,7 +332,7 @@ nav > ul {
 nav > ul > li > a {
     display: inline-block;
     padding: 0 20px;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "Nunito", sans-serif;
     font-size: 1.25em;
     font-weight: 600;
     color: #624041;
